# Streamlines

./: .gitignore  MutliBlockVectorFieldSource.py  OldAlgCurve2D.pvsm  OldAlgOrbit.pvsm  Streamlines.code-workspace  TBWaves.pvsm  TBWaves2.pvsm  TheStateOfThings.txt  WField.pvsm  WavesVField.pvsm  ddddd.pvsm  doubleorbit_imgen.pvsm  project_vti_series.py  simplevectorfield.py  streamlines_2d.pvsm  streamlines_coherent.pvsm  streamlines_double_orbit.pvsm  streamlines_hotroom.pvsm  streamlines_hotroom_2d.pvsm  streamlines_slice.pvsm  streamlines_turk.pvsm  streamlinestime.pvsm  test.py  timePathlineFilter.py  turkBanksPathlineFilter.py  vectorFieldDefs.py  vectorFieldSource.py
cpp_version/Plugin/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TurkBanksStreamlineFilter.plugin  TurkBanksStreamlineFilterPlugin.cxx  TurkBanksStreamlineFilterPlugin.h  TurkBanksStreamlineFilter_qch.h  cmake_install.cmake
cpp_version/Plugin/TurkBanksStreamlineFilterSources/: CMakeLists.txt  CTestTestfile.cmake  FilterConfig.h  FilterPainter.cxx  FilterPainter.h  FilterStack.h  FilterTarget.h  LowPassFilter.cxx  LowPassFilter.h  Makefile  Oracle.cxx  Oracle.h  Streamline.cxx  Streamline.h  TurkBanksStreamlineFilter.xml  TurkBanksStreamlineFilterSourcesModule.h  VectorField.cxx  VectorField.h  cmake_install.cmake  vtk.module  vtkTurkBanksStreamlineFilter.cxx  vtkTurkBanksStreamlineFilter.h
cpp_version/Plugin/paraview_help/: LiveSourceDummy.qch  LiveSourceDummy.qhp  LiveSourceDummy_doc.xslt  LiveSourceDummy_doc.xslt.xslt  TurkBanksStreamlineFilter.qch  TurkBanksStreamlineFilter.qhp  (+9 more)
(+69 files in other folders)
